# One-Calendar

./: .env.example  .gitignore  .lintstagedrc.json  .oxlintrc.json  .vercelignore  CLAUDE.md  CODE_OF_CONDUCT.md  MONOREPO.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  commitlint.config.ts  components.json  db.py  docker-compose.yml  docs-performance-optimization.md  drizzle.config.ts  eslint.config.mjs  eslint.config.ts  i18n.json  instrumentation-client.ts  knip.json  middleware.ts  next.config.mjs  next.config.ts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  proxy.ts  schema.prisma  tailwind.config.ts  tsconfig.json  turbo.json  vercel.json
.github/: FUNDING.yml
app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  reset-password.tsx  sitemap.ts
apps/calendar-client/src-tauri/: Cargo.toml  tauri.conf.json
components/: AddEventForm.tsx  AnalyticsGuide.tsx  AnalyticsView.tsx  BookmarkPanel.tsx  BookmarkSheet.tsx  Calendar.tsx  CalendarView.tsx  CreateEventDialog.tsx  DailyToast.tsx  DayView.tsx  EventDialog.tsx  EventPreview.tsx  EventUrlHandle.tsx  FeatureGuide.tsx  Home.tsx  ImportExport.tsx  Landing.tsx  Local.tsx  LoginForm.tsx  MiniCalendarSheet.tsx  ModeToggle.tsx  MonthView.tsx  QuickStartGuide.tsx  ResetForm.tsx  RightSidebar.tsx  Settings.tsx  Sidebar.tsx  SignUpForm.tsx  SuggestionService.tsx  TimeAnalytics.tsx  TodayToast.tsx  UserProfileButton.tsx  Weather.tsx  WeekView.tsx  calendar.tsx  documentation-section.tsx  effortless-integration-updated.tsx  (+2 more)
(+785 files in other folders)
