[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
debug = 0          # 0 表示完全关闭 debug 调试符号，1 表示仅生成行号，2 是默认值（完整符号）
incremental = true # 保持增量编译开启，确保开发时编译速度不受大影响

# 如果你想顺便让打包后的体积更小，也可以优化 release 配置
[profile.release]
debug = 0
strip = true    # 自动剥离二进制文件中的符号信息
opt-level = "z" # 优化体积
